# NSIS-POC

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: backend-build.yml  build.yml  frontend-build.yml
backend/: .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 271e8e1d4f46_update_user_model.py  7cffb92fbf26_create_users_table.py
backend/app/: main.py
backend/app/api/endpoints/: users.py
backend/app/core/: config.py
backend/app/db/: models.py
backend/app/schemas/: user.py
deploy/: license.txt
deploy/nsis/: installer.nsi
frontend/: CMakeLists.txt  CMakeUserPresets.json  main.cpp
